--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,9 @@
-buildscript {
-    repositories {
-    }
 
-    dependencies {
-    }
-}
 apply plugin: 'com.android.application'
 
 repositories {
+    maven { url 'https://jitpack.io' }
+
 }
 
 apply plugin: 'com.google.gms.google-services'
@@ -16,7 +12,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.get.lucky.lt"
-        minSdkVersion 24
+        minSdkVersion 16
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -46,13 +42,12 @@ dependencies {
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
     //Views
     implementation 'com.edmodo:cropper:1.0.1'
-    implementation 'com.jakewharton:butterknife:10.1.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
     //OCR
     implementation 'com.rmtheis:tess-two:9.0.0'
     //RX
-    implementation "io.reactivex.rxjava2:rxjava:2.2.9"
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.9'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
     //Dagger
     implementation 'com.google.dagger:dagger:2.13'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.13'
